--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <nav>
+          <a href="">First</a>
+          <a href="">Second</a>
+        </nav>
+      </header>
     
 </body>
 </html>git add <div class=""></div>
